--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ python:
 install: "pip install -r requirements.txt"
 script:
     - "flake8 ."
-    - "pylint djajaxredirection setup.py"
-    - "nosetests djajaxredirection"
+    - "pylint dj_ajax_redirect setup.py"
+    - "nosetests dj_ajax_redirect"
